convert mock to Official
